--- a/sass/_wiki.scss
+++ b/sass/_wiki.scss
@@ -110,7 +110,7 @@
 
 .wiki-docs {
 	list-style: none;
-	margin:0 0 18px 18px;
+	margin:0 0 18px 0;
 	li,
 	li:active {
 		background-image: url(images/wiki-doc.svg);
@@ -128,7 +128,7 @@
 
 .wiki-subcats {
 	list-style: none;
-	margin:0 0 18px 18px;
+	margin:0 0 18px 0;
 	li {
 		background-image: url(images/wiki-folder.svg);
 		background-position: left 5px;
