--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -219,11 +219,11 @@ h4 {
 }
 
 h5 {
-	font-size: 20px;
+	font-size: 23px;
 }
 
 h6 {
-	font-size: 18px;
+	font-size: 21px;
 }
 
 p {
@@ -515,11 +515,6 @@ span.wpcf7-not-valid-tip {
 	}
 }
 
-/* Hide original loader */
-.wpcf7-spinner {
-	
-}
-
 .submitting .wpcf7-spinner {
 	display: inline-block;
 }
@@ -722,7 +717,6 @@ input[type="submit"]:disabled {
 }
 
 @media only screen and (min-width: 600px) {
-
 	.button,
 	.button:visited,
 	.btn,
@@ -733,7 +727,6 @@ input[type="submit"]:disabled {
 	input[type="button"] {
 		font-size: vars.$base-font-size;
 	}
-
 }
 
 /*
@@ -753,7 +746,6 @@ fieldset {
 	border: 1px solid #eee;
 	margin-bottom: 20px;
 	padding: 2%;
-
 	>div {
 		margin-bottom: 10px;
 	}
@@ -850,7 +842,6 @@ input[type="checkbox"] {
 }
 
 @media only screen and (min-width: 600px) {
-
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
@@ -1093,6 +1084,7 @@ body.mobilenavopen {
 	transition: all 0.1s ease-in-out;
 	z-index: 999;
 	.container {
+		height: 80px;
 		position: relative;
 	}
 	svg {
@@ -1116,32 +1108,10 @@ body.mobilenavopen {
 	}
 }
 
-.lightHeader {
-	#header {
-		color: #ddd;
-		svg {
-			path {
-				fill: vars.$colour-text;
-			}
-		}
-		#headerLogin {
-			color: #222;
-			a {
-				color: vars.$colour-link;
-				&:hover {
-					color: vars.$colour-text;
-				}
-			}
-		}
-	}
-}
+
 
 	@media only screen and (min-width: 600px) {
 		#header {
-			height: 95px;
-			&.scrollHeader {
-				height: 95px;
-			}
 			&.scrollHeader {
 				background: rgba(255, 255, 255, .95);
 				box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -1152,6 +1122,30 @@ body.mobilenavopen {
 						fill: #222;
 					}
 				}
+				#nav2 {
+					
+				}
+				#headerLogin {
+					color: #222;
+					transition: all 0.1s ease-in-out;
+					a {
+						color: vars.$colour-link;
+						&:hover {
+							color: vars.$colour-text;
+						}
+					}
+				}
+			}
+		}
+	}
+
+	@media only screen and (min-width: 1200px) {
+		#header {
+			height: 95px;
+			.container {
+				height: 95px;
+			}
+			&.scrollHeader {
 				#nav2 {
 					a {
 						color: vars.$colour-link;
@@ -1173,25 +1167,273 @@ body.mobilenavopen {
 						}
 					}
 				}
-				#headerLogin {
-					color: #222;
-					transition: all 0.1s ease-in-out;
-					a {
-						color: vars.$colour-link;
-						&:hover {
-							color: vars.$colour-text;
-						}
-					}
+			}
+		}
+	}
+	
+
+#headerLogin {
+	color: #ddd;
+	font-size: 14px;
+	line-height: 1.3;
+	position: absolute;
+	top: 24px;
+	right: 70px;
+	text-align: center;
+	transition: all 0.1s ease-in-out;
+	width: 220px;
+	a {
+		color: #ddd;
+		transition: all 0.1s ease-in-out;
+		&:hover {
+			color: #fff;
+		}
+	}
+	.userLinks {
+		display: block;
+	}
+}
+
+	@media only screen and (min-width: 1200px) {
+		#headerLogin {
+			font-size: 16px;
+				top: 15px;
+				right: 1%;
+			transform: none;
+			width: auto;
+			.username {
+				margin-right: 15px;
+			}
+			strong {
+				display: inline;
+			}
+			.userLinks {
+				display: inline;
+			}
+		}
+	}
+
+#headerLogo {
+	height: auto;
+	position: absolute;
+	left: 15px;
+	top: 10px;
+	transition: all 0.2s ease-in;
+	width: 55px;
+	z-index: 1600;
+	img {
+		display: block;
+		width: 100%;
+	}
+	svg {
+		path {
+			transition: all 0.2s ease-in-out;
+		}
+	}
+}
+
+	@media only screen and (min-width: 1200px) {
+		#headerLogo {
+			margin: 0;
+			position: absolute;
+			left: 1%;
+			top: 15px;
+			transform: none;
+			width: 60px;
+		}
+	}
+
+.mobilenavopen #headerLogo {
+	svg {
+		path {
+			fill: #fff;
+			transition: all 0.2s ease-in-out;
+		}
+	}
+}
+
+#nav2 {
+	display: none;
+}
+
+#headerMenuMobile {
+	border: none;
+		-moz-box-sizing: border-box;
+		-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	display: inline-block;
+	position: absolute;
+	top: 28px;
+	right: 20px;
+	vertical-align: top;
+	z-index: 2000;
+	button {
+		background: transparent;
+		border: none;
+		border-radius: 0;
+		color: #fff;
+		display: block;
+		font-size: 0;
+		height: 29px;
+		padding: 0;
+		width: 29px;
+		span {
+			background: #fff;
+			display: block;
+			height: 5px;
+			position: absolute;
+			top: 12px;
+			left: 0;
+			transition: all 0.2s ease-in-out;
+			width: 29px;
+		}
+		&:before {
+			background: #fff;
+			content: "";
+			height: 5px;
+			position: absolute;
+			top: 0;
+			left: 0;
+			transition: all 0.2s ease-in-out;
+			width: 29px;
+		}
+		&:after {
+			background: #fff;
+			content: "";
+			height: 5px;
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			transition: all 0.2s ease-in-out;
+			width: 29px;
+		}
+		&:active {
+			box-shadow: none;
+		}
+	}
+	button.navOpen {
+		&:before {
+			background: #fff;
+			transform: rotate(45deg);
+			top: 12px;
+			left: -3px;
+			width: 38px;
+		}
+		span {
+			opacity: 0;
+		}
+		&:after {
+			background: #fff;
+			transform: rotate(-45deg);
+			bottom: 12px;
+			left: -3px;
+			width: 38px;
+		}
+	}
+}
+
+#header.scrollHeader {
+	
+	#headerLogin {
+		color: vars.$colour-text;
+		a {
+			color: vars.$colour-button;
+		}
+	}
+	
+	#headerMenuMobile {
+		button {
+			span,
+			&:before,
+			&:after {
+				background: vars.$colour-button;
+			}
+		}
+		button.navOpen {
+			span,
+			&:before,
+			&:after {
+				background: #fff;
+			}
+		}
+	}
+}
+
+
+.lightHeader {
+	#header {
+		color: #ddd;
+		svg {
+			path {
+				fill: vars.$colour-text;
+			}
+		}
+		#headerLogin {
+			color: #222;
+			a {
+				color: vars.$colour-link;
+				&:hover {
+					color: vars.$colour-text;
+				}
+			}
+		}
+		#headerMenuMobile {
+			button {
+				span,
+				&:before,
+				&:after {
+					background: vars.$colour-button;
+				}
+			}
+		}
+		#nav2 {
+			a {
+				color: #fff;
+			}
+		}
+	}
+	&.mobilenavopen #header {
+		#headerLogo {
+			svg {
+				path {
+					fill: #fff;
+					transition: all 0.2s ease-in-out;
+				}
+			}
+		}
+		#headerMenuMobile {
+			button {
+				span,
+				&:before,
+				&:after {
+					background: #fff;
 				}
 			}
 		}
 	}
+	&.scrollHeader {
+		#headerMenuMobile {
+			button {
+				span,
+				&:before,
+				&:after {
+					background: #fff;
+				}
+			}
+		}
+	}
+}
 
 	@media only screen and (min-width: 1200px) {
 		
 		.lightHeader {
 			#header {
 				color: #ddd;
+				height: 95px;
+				.container {
+					height: 95px;
+					position: relative;
+				}
 				svg {
 					path {
 						fill: vars.$colour-text;
@@ -1229,231 +1471,20 @@ body.mobilenavopen {
 						}
 					}
 				}
-			}
-		}
-		
-		#header {
-			height: 95px;
-			.container {
-				height: 95px;
-				position: relative;
-			}
-		}
-	}
-
-#headerLogin {
-	color: #ddd;
-	font-size: 14px;
-	line-height: 1.3;
-	position: absolute;
-	top: 24px;
-	right: 70px;
-	text-align: center;
-	transition: all 0.1s ease-in-out;
-	width: 220px;
-	.username {
-		margin-right: 15px;
-	}
-	a {
-		color: #ddd;
-		transition: all 0.1s ease-in-out;
-		&:hover {
-			color: #fff;
-		}
-	}
-	.userLinks {
-		display: block;
-	}
-}
-
-	@media only screen and (min-width: 1200px) {
-		#headerLogin {
-			font-size: 16px;
-				top: 15px;
-				right: 1%;
-			transform: none;
-			width: auto;
-			strong {
-				display: inline;
-			}
-			.userLinks {
-				display: inline;
-			}
-		}
-	}
-
-#headerLogo {
-	height: auto;
-	position: absolute;
-	left: 15px;
-	top: 10px;
-	transition: all 0.2s ease-in;
-	width: 55px;
-	z-index: 1600;
-	img {
-		display: block;
-		width: 100%;
-	}
-	svg {
-		path {
-			transition: all 0.2s ease-in-out;
-		}
-	}
-}
-
-@media only screen and (min-width: 1200px) {
-	#headerLogo {
-		margin: 0;
-		position: absolute;
-		left: 1%;
-		top: 15px;
-		transform: none;
-		width: 60px;
-	}
-}
-
-.mobilenavopen #headerLogo {
-	svg {
-		path {
-			fill: #fff;
-			transition: all 0.2s ease-in-out;
-		}
-	}
-}
-
-#nav2 {
-	display: none;
-}
-
-#headerMenuMobile {
-	border: none;
-		-moz-box-sizing: border-box;
-		-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-	display: inline-block;
-	position: absolute;
-	top: 28px;
-	right: 20px;
-	vertical-align: top;
-	z-index: 2000;
-	button {
-		background: transparent;
-		border: none;
-		border-radius: 0;
-		color: #fff;
-		display: block;
-		font-size: 0;
-		height: 29px;
-		padding: 0;
-		width: 29px;
-		span {
-			background: vars.$colour-button;
-			display: block;
-			height: 5px;
-			position: absolute;
-			top: 12px;
-			left: 0;
-			transition: all 0.2s ease-in-out;
-			width: 29px;
-		}
-		&:before {
-			background: vars.$colour-button;
-			content: "";
-			height: 5px;
-			position: absolute;
-			top: 0;
-			left: 0;
-			transition: all 0.2s ease-in-out;
-			width: 29px;
-		}
-		&:after {
-			background: vars.$colour-button;
-			content: "";
-			height: 5px;
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			transition: all 0.2s ease-in-out;
-			width: 29px;
-		}
-		&:active {
-			box-shadow: none;
-		}
-	}
-	button.navOpen {
-		&:before {
-			background: #fff;
-			transform: rotate(45deg);
-			top: 12px;
-			left: -3px;
-			width: 38px;
-		}
-		span {
-			opacity: 0;
-		}
-		&:after {
-			background: #fff;
-			transform: rotate(-45deg);
-			bottom: 12px;
-			left: -3px;
-			width: 38px;
-		}
-	}
-}
-
-	.darkHeader {
-		#headerMenuMobile {
-			button {
-				span,
-				&:before,
-				&:after {
-					background: #fff;
-				}
-			}	
-		}
-		.scrollHeader {
-			#headerLogin {
-				color: vars.$colour-text;
-				a {
-					color: vars.$colour-button;
-				}
-			}
-			#headerMenuMobile {
-				button {
-					span,
-					&:before,
-					&:after {
-						background: vars.$colour-button;
+				&.scrollHeader {
+					
+					svg {
+						path {
+							fill: vars.$colour-text;
+						}
 					}
+					
+					
 				}
-			}	
+			}
 		}
 	}
 
-#headerContactMobile {
-	background-image: url(images/icon-mobile.svg);
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-size: auto 100%;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-	display: none;
-	font-size: 0;
-	height: 34px;
-	position: absolute;
-	top: 25px;
-	right: 20px;
-	vertical-align: top;
-	width: 30px;
-}
-
-	@media only screen and (min-width: 1200px) {
-		#headerMenuMobile,
-		#headerContactMobile {
-			display: none;
-		}
-	}
 
 /*
 	Flexible content
@@ -1564,11 +1595,22 @@ body.mobilenavopen {
 	color: #333;
 	font-size: 4rem;
 }
-
+	
 	@media only screen and (min-width: 600px) {
-		.banners .inner h1.homeHeader {
-			font-size: 8rem;
-		}	
+		.banners .inner {
+			top: 55%;
+			h1.homeHeader {
+				font-size: 6rem;
+			}
+		}
+	}
+	
+	@media only screen and (min-width: 1200px) {
+		.banners .inner {
+			h1.homeHeader {
+				font-size: 8rem;
+			}
+		}
 	}
 
 .filler {
@@ -1710,7 +1752,7 @@ body.mobilenavopen {
 		margin: 0;
 	}
 	.container {
-		margin-bottom: 60px;
+		margin-bottom: 80px;
 	}
 	.text {
 		margin-bottom: 30px;
@@ -1838,62 +1880,55 @@ body.mobilenavopen {
 	margin: 0 auto;
 	max-width: 700px;
 	padding: 0 20px;
-}
-
-.faq {
-	border-bottom: 1px solid #eee;
-	margin-bottom: 12px;
-	position: relative;
-}
-
-.faq:first-child {
-	border-top: 1px solid #eee;
-	padding-top: 12px;
-}
-
-.faq-question {
-	cursor: pointer;
-	padding-left: 30px;
-	position: relative;
-}
-
-.faq-question:before {
-	background-image: url(images/icon-chev-down-grey.svg);
-	background-size: 100% auto;
-	background-position: center center;
-	background-repeat: no-repeat;
-	content: "";
-	display: inline-block;
-	height: 20px;
-	transition: all .2s linear;
-	position: absolute;
-	top: 8px;
-	left: 0;
-	width: 20px;
-}
-
-.faq-answer {
-	display: none;
-	overflow: hidden;
-	padding-left: 30px;
-}
-
-.faq.active {
+	.faq {
+		border-bottom: 1px solid #eee;
+		margin-bottom: 12px;
+		position: relative;
+	}
+	.faq:first-child {
+		border-top: 1px solid #eee;
+		padding-top: 12px;
+	}
+	.faq-question {
+		cursor: pointer;
+		padding-left: 30px;
+		position: relative;
+	}
 	.faq-question:before {
-		-ms-transform: rotate(180deg);
-		-moz-transform: rotate(180deg);
-		-webkit-transform: rotate(180deg);
-		transform: rotate(180deg);
-		-moz-transition: all .2s linear;
-		-webkit-transition: all .2s linear;
+		background-image: url(images/icon-chev-down-grey.svg);
+		background-size: 100% auto;
+		background-position: center center;
+		background-repeat: no-repeat;
+		content: "";
+		display: inline-block;
+		height: 20px;
 		transition: all .2s linear;
+		position: absolute;
+		top: 8px;
+		left: 0;
+		width: 20px;
 	}
 	.faq-answer {
-		display: block;
-		padding-bottom: 20px;
+		display: none;
+		overflow: hidden;
+		padding-left: 30px;
+	}
+	.faq.active {
+		.faq-question:before {
+			-ms-transform: rotate(180deg);
+			-moz-transform: rotate(180deg);
+			-webkit-transform: rotate(180deg);
+			transform: rotate(180deg);
+			-moz-transition: all .2s linear;
+			-webkit-transition: all .2s linear;
+			transition: all .2s linear;
+		}
+		.faq-answer {
+			display: block;
+			padding-bottom: 20px;
+		}
 	}
 }
-
 
 /*
 	Blog section
@@ -1945,6 +1980,20 @@ body.mobilenavopen {
 	}
 	.post {
 		margin-bottom: 40px;
+		
+		/* These are technically the same, but use both */
+		overflow-wrap: break-word;
+		word-wrap: break-word;
+		
+		-ms-word-break: break-all;
+		/* This is the dangerous one in WebKit, as it breaks things wherever */
+		word-break: break-all;
+		/* Instead use this non-standard one: */
+		word-break: break-word;
+		
+		text-overflow: ellipsis;
+		
+		
 	}
 	.news-thumb {
 		img {
@@ -2163,8 +2212,6 @@ body.mobilenavopen {
 	
 }
 
-
-
 #searchwrapper {
 	background: #eee;
 	padding: 10px;
@@ -2176,7 +2223,7 @@ body.mobilenavopen {
 	}
 }
 
-	@media only screen and (min-width: 600px) {
+	@media only screen and (min-width: 900px) {
 		#sidebar {
 			padding: 0 0 40px 20px;
 		}
@@ -2189,6 +2236,7 @@ body.mobilenavopen {
 }
 
 .searchResults {
+	padding-bottom: 3rem;
 	max-width: 800px;
 	.postmetadata {
 		display: none;
@@ -2204,7 +2252,6 @@ body.mobilenavopen {
 	text-align: center;
 	a {
 		color: #ddd;
-		text-transform: uppercase;
 		&:visited {
 			color: #ddd;
 		}
@@ -2229,7 +2276,6 @@ body.mobilenavopen {
 }
 
 	@media only screen and (min-width: 600px) {
-	
 		#footer {
 			.footer-menu {
 				a {
@@ -2238,7 +2284,6 @@ body.mobilenavopen {
 				}
 			}
 		}
-	
 	}
 
 .btt {
@@ -2289,6 +2334,11 @@ body.mobilenavopen {
 */
 
 @media only screen and (min-width: 1200px) {
+	
+	#headerMenuMobile {
+		display: none;
+	}
+	
 	#nav2 {
 		display: block;
 		position: absolute;
@@ -2460,9 +2510,6 @@ html .wcpt-product-form select {
 }
 
 
-
-
-
 /* 
 	ACF Extended
 */
@@ -2496,6 +2543,10 @@ ul.acf-checkbox-list li {
 	line-height: inherit;
 }
 
+/* 
+	Service records
+*/
+
 .serviceRecord {
 	width:100%;
 	.container {
@@ -2511,7 +2562,6 @@ ul.acf-checkbox-list li {
 	}
 	.tcb_user_info {
 		margin-left: 0!important;
-		
 		img {
 			width: auto;
 		}
@@ -2530,7 +2580,6 @@ ul.acf-checkbox-list li {
 			}
 		}
 	}
-	
 	.tcb_user_ribbons {
 		p {
 			margin-bottom: 5px;
@@ -2540,8 +2589,6 @@ ul.acf-checkbox-list li {
 			width: 200px;
 		}
 	}
-	
-	
 }
 
 	@media only screen and (min-width: 830px) {
@@ -2575,6 +2622,10 @@ ul.acf-checkbox-list li {
 	}
 }
 
+/* 
+	Appear when scrolled into view
+*/
+
 .fade-in {
 	opacity: 0;
 	transition: opacity 0.5s ease-in-out;
@@ -2583,3 +2634,18 @@ ul.acf-checkbox-list li {
 .in-view {
 	opacity: 1;
 }
+
+.screen-reader-text {
+	display: none;
+}
+
+html .acf-url i {
+	top: 18px;
+}
+
+	@media only screen and (min-width: 600px) {
+		
+		html .acf-url i {
+			top: 20px;
+		}
+	}
